# MonaServer2-GUI

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Directory.Build.props  Directory.Packages.props  LICENSE  MonaServer2-GUI.sln  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
docs/: architecture.md  development.md
installer/windows/: Create-DevCert.ps1  Generate-Icon.ps1  MonaServer2-GUI.iss  Sign-Binaries.ps1
lua/www/admin/: main.lua
obs-plugin/: .gitignore  CMakeLists.txt  README.md  buildspec.json
obs-plugin/data/locale/: en-US.ini
obs-plugin/installer/: windows-installer.iss
obs-plugin/src/: mona-output.cpp  mona-output.h  plugin-main.cpp
obs-plugin/src/control/: ptz-channel.cpp  ptz-channel.h  telemetry.cpp  telemetry.h  ws-client.cpp  ws-client.h
obs-plugin/src/muxer/: mpegts.cpp  mpegts.h
obs-plugin/src/transport/: rtmp-transport.cpp  rtmp-transport.h  srt-transport.cpp  srt-transport.h  transport.h  whip-transport.cpp  whip-transport.h
src/MonaServer2.Core/: MonaServer2.Core.csproj
src/MonaServer2.Core/Api/: MonaApiClient.cs
src/MonaServer2.Core/Config/: IniParser.cs  MonaServerConfig.cs
src/MonaServer2.Core/Models/: LogEntry.cs  Publication.cs  ServerStatus.cs  Session.cs  StreamTrack.cs
src/MonaServer2.Core/OBS/: OBSDetectionService.cs  OBSModels.cs
src/MonaServer2.Core/Process/: MonaServerProcess.cs
src/MonaServer2.Core/Streaming/: CalibrationArgs.cs  StreamRequest.cs  StreamingProcess.cs  StreamingSettings.cs
src/MonaServer2.Core/Update/: BinaryUpdateService.cs  UpdateInfo.cs  UpdateSettings.cs
src/MonaServer2.Desktop/: App.axaml  App.axaml.cs  MonaServer2.Desktop.csproj  Program.cs
src/MonaServer2.Desktop/Services/: ApiService.cs  SignalRService.cs
src/MonaServer2.Desktop/ViewModels/: ConfigViewModel.cs  DashboardViewModel.cs  LogsViewModel.cs  MainWindowViewModel.cs  OBSSetupViewModel.cs  PushStreamViewModel.cs  ServiceViewModel.cs  SessionsViewModel.cs  StreamsViewModel.cs  ViewModelBase.cs
src/MonaServer2.Desktop/Views/: ConfigView.axaml  ConfigView.axaml.cs  DashboardView.axaml  DashboardView.axaml.cs  LogsView.axaml  LogsView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  OBSSetupView.axaml  OBSSetupView.axaml.cs  PushStreamView.axaml  PushStreamView.axaml.cs  ServiceView.axaml  ServiceView.axaml.cs  SessionsView.axaml  SessionsView.axaml.cs  StreamsView.axaml  StreamsView.axaml.cs
src/MonaServer2.Service/: MonaServer2.Service.csproj  Program.cs  ServiceSettings.cs  Worker.cs  appsettings.json
src/MonaServer2.Service/Controllers/: ConfigController.cs  OBSController.cs  OBSSetupController.cs  ProcessController.cs  PublicationsController.cs  PusherController.cs  SessionsController.cs  StatusController.cs  UpdateController.cs
src/MonaServer2.Service/Hubs/: MonitorHub.cs  OBSHub.cs
tests/MonaServer2.Core.Tests/: IniParserTests.cs  LogEntryTests.cs  MonaServer2.Core.Tests.csproj
webui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
webui/src/: App.tsx  index.css
webui/src/components/: Dashboard.tsx  Logs.tsx  ServiceControl.tsx  Sessions.tsx  Streams.tsx
webui/src/hooks/: useApi.ts  useSignalR.ts
webui/src/types/: index.ts
